--- a/ensaios_planta/fan-plate_analisys.ipynb
+++ b/ensaios_planta/fan-plate_analisys.ipynb
@@ -529,7 +529,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jp = -0.08503225267782484\n"
+      "Jp = 0.3584266433242307\n"
      ]
     }
    ],
@@ -541,7 +541,7 @@
     "\n",
     "tg = (m*g*l)\n",
     "\n",
-    "Jp = (((((tg*(T**2))+(T*np.sqrt(abs(((tg*T)**2)-(8*(np.pi**2)*tg*bp)))))/(8*(np.pi**2))))-(bp/2))\n",
+    "Jp = ((((-4*tg*bp)+(T**2))/(8*tg))+((T*np.sqrt((-8*tg*bp)+(T**2)))/(8*tg)))\n",
     "print(f'Jp = {Jp}')"
    ]
   },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -582,6 +582,7 @@
     "C = (np.linalg.inv(A.T@A)@A.T@B).T[0]\n",
     "\n",
     "c2 = C[0]\n",
+    "\n",
     "\n",
     "wlin = np.linspace(wmot[0], wmot[-1], 100)\n",
     "sincalc = np.polyval(np.array([c2, 0, 0]), wlin)\n",
