--- a/Relatorio 1/ensaios_planta/ajuste_param.ipynb
+++ b/Relatorio 1/ensaios_planta/ajuste_param.ipynb
@@ -110,6 +110,26 @@
     "plt.legend()\n",
     "plt.savefig('curves/ajuste.eps', dpi=600, transparent=True, bbox_inches='tight')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99.34201884356615"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "angosclpf[0]"
+   ]
   }
  ],
  "metadata": {
